# Koda2

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  EXCHANGE_SETUP.md  GOOGLE_SETUP.md  README.md  docker-compose.yml  get-koda2.ps1  get-koda2.sh  install.ps1  install.sh  pyproject.toml  setup_wizard.py  uninstall.sh  update.sh
docs/: README.md  developer-guide.md  user-guide.md  windows-install.md
docs/adr/: 001-technology-stack.md
executiveai/: __init__.py  config.py  database.py  logging_config.py  main.py  orchestrator.py
executiveai/api/: __init__.py  routes.py
executiveai/modules/: __init__.py
executiveai/modules/calendar/: __init__.py  models.py  providers.py  service.py
executiveai/modules/documents/: __init__.py  service.py
executiveai/modules/email/: __init__.py  service.py
executiveai/modules/images/: __init__.py  service.py
executiveai/modules/llm/: __init__.py  models.py  providers.py  router.py
executiveai/modules/macos/: __init__.py  service.py
executiveai/modules/memory/: __init__.py  models.py  service.py  vector_store.py
executiveai/modules/messaging/: __init__.py  telegram_bot.py  whatsapp_bot.py
executiveai/modules/scheduler/: __init__.py  service.py
executiveai/modules/self_improve/: __init__.py  service.py
executiveai/security/: __init__.py  audit.py  encryption.py  rbac.py
koda2/: __init__.py  config.py  database.py  formatting.py  logging_config.py  main.py  orchestrator.py
koda2/api/: __init__.py  routes.py
koda2/cli/: __init__.py  commands.py
koda2/dashboard/: websocket.py
koda2/dashboard/templates/: index.html
koda2/modules/: __init__.py
koda2/modules/account/: __init__.py  models.py  service.py  (+1 more)
koda2/security/: audit.py  encryption.py  rbac.py
koda2/supervisor/: __init__.py  cli.py  error_collector.py  evolution.py  improvement_queue.py  learner.py  model_router.py  monitor.py  notifier.py  repair.py  safety.py
scripts/: delete_old_orchestrator.sh  extract_routes.py  gemini_imagen.py
tests/: __init__.py  conftest.py  test_account_validators.py  test_api.py  test_assistant_mail.py  test_calendar.py  test_calendar_service.py  test_clean_response.py  test_config.py  test_database.py  test_documents.py  test_email.py  test_final_output_filter.py  test_images.py  test_improvement_queue.py  test_llm.py  test_macos.py  test_memory.py  test_memory_service.py  test_messaging.py  test_new_features.py  test_orchestrator.py  test_outbound_guard.py  test_outbound_sanitizer.py  test_output_sanitizer.py  test_response_cleaner.py  test_response_pipeline.py  test_response_sanitizer.py  test_sanitize_user_message.py  test_sanitizer.py  test_scheduler.py  test_security.py  test_self_improve.py  test_shutdown.py  test_supervisor.py  test_system_prompt.py  test_user_facing_filter.py  test_whatsapp_guard.py  test_whatsapp_send_media.py
workspace/: SOUL.md  TOOLS.md
(+110 files in other folders)
