[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koda2"
version = "0.5.3"
description = "Professional AI Executive Assistant — fully automated director-level secretary"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Ronald Jonkers"}]

dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",

    # Data Layer
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
    "redis>=5.1.0",

    # AI / LLM
    "openai>=1.50.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.8.0",

    # Calendar & Email
    "exchangelib>=5.4.0",
    "google-api-python-client>=2.149.0",
    "google-auth-oauthlib>=1.2.0",
    "msgraph-sdk>=1.7.0",
    "caldav>=1.4.0",
    "aiosmtplib>=3.0.0",
    "aioimaplib>=1.1.0",

    # Messaging
    "python-telegram-bot>=21.6",
    # WhatsApp uses Node.js bridge (whatsapp-web.js) — no Python dependency needed

    # Document Generation
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.5",
    "reportlab>=4.2.0",
    "Jinja2>=3.1.4",
    "weasyprint>=62.0",
    
    # API Clients
    "httpx-ntlm>=1.4.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",

    # Security
    "cryptography>=43.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Scheduling
    "APScheduler>=3.10.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "aiofiles>=24.1.0",
    "rich>=13.9.0",
    
    # Dashboard & Real-time
    "python-socketio>=5.11.0",
    "psutil>=5.9.0",
    
    # CLI
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
koda2 = "koda2.cli:app"
koda2-supervisor = "koda2.supervisor.cli:app"
koda2-server = "koda2.main:main"
koda2-setup = "setup_wizard:main"
koda2-config = "setup_wizard:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=koda2 --cov-report=term-missing --cov-report=html -v"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
